fixing navbar on mobile

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -392,7 +392,7 @@ animation-duration:2s;
 		z-index:5;
 
 		background-color:white;
-		min-width:200px;
+		min-width:300px;
 		height:50px;
 		width:100%;
 	}
